--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.26.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
